--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,22 @@ header {
   text-align: center; }
   header ul {
     list-style-type: none;
-    padding: 0; }
-    header ul li {
-      display: inline-block;
-      border: 1px solid black;
-      padding: 5px 15px; }
-      header ul li a {
-        color: black;
-        text-decoration: none; }
+    padding: 0;
+    display: none; }
+    header ul a {
+      color: black;
+      text-decoration: none; }
+  header .button {
+    border: 1px solid black;
+    padding: 3px 15px; }
+  header #close-menu {
+    display: none; }
+
+main .slide {
+  height: 200px; }
+main .intro, main .ship {
+  width: 80%;
+  margin: auto; }
 
 footer {
   text-align: center; }
@@ -18,5 +26,18 @@ footer {
     padding: 0; }
     footer ul li {
       display: inline-block; }
+
+header {
+  text-align: center; }
+  header ul {
+    list-style-type: none;
+    padding: 0; }
+    header ul li {
+      display: inline-block;
+      border: 1px solid black;
+      padding: 5px 15px; }
+      header ul li a {
+        color: black;
+        text-decoration: none; }
 
 /*# sourceMappingURL=styles.css.map */
