--- a/css/styles.sass
+++ b/css/styles.sass
@@ -1,5 +1,46 @@
 header
    text-align: center   
+   
+   ul
+      list-style-type: none
+      padding: 0
+      display: none
+         
+      a
+         color: black
+         text-decoration: none
+
+   .button
+      border: 1px solid black
+      padding: 3px 15px
+
+   #close-menu
+      display: none
+
+main
+
+   .slide
+      height: 200px
+ 
+   .intro, .ship
+      width: 80%
+      margin: auto
+
+
+footer
+   text-align: center
+
+   ul
+      list-style-type: none
+      padding: 0
+
+      li
+         display: inline-block
+
+@media (width: 700px)
+header
+   text-align: center   
+   
    ul
       list-style-type: none
       padding: 0
@@ -12,13 +53,3 @@ header
          a
             color: black
             text-decoration: none
-
-footer
-   text-align: center
-   
-   ul
-      list-style-type: none
-      padding: 0
-
-      li
-         display: inline-block
