--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,34 @@
 header {
   text-align: center; }
+  header .menu-button {
+    padding: 5px 15px;
+    background-color: #e7e7e7; }
   header ul {
     list-style-type: none;
-    padding: 0;
-    display: none; }
+    padding: 0 0 5px 0;
+    display: none;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    z-index: 1; }
+    header ul li {
+      margin-bottom: 4px;
+      display: block; }
+    header ul li:hover {
+      background-color: #7BB5FF; }
     header ul a {
       color: black;
       text-decoration: none; }
-  header .button {
-    border: 1px solid black;
-    padding: 3px 15px; }
   header #close-menu {
     display: none; }
 
 main .slide {
   height: 200px; }
-main .intro, main .ship {
+main h2, main .content {
   width: 80%;
   margin: auto; }
+main .parallax {
+  height: 200px;
+  box-shadow: inset 10px 10px 10px #555; }
 
 footer {
   text-align: center; }
@@ -27,17 +38,22 @@ footer {
     footer ul li {
       display: inline-block; }
 
-header {
-  text-align: center; }
-  header ul {
-    list-style-type: none;
-    padding: 0; }
-    header ul li {
+@media (min-width: 700px) {
+  header {
+    text-align: center; }
+    header ul {
       display: inline-block;
-      border: 1px solid black;
-      padding: 5px 15px; }
-      header ul li a {
-        color: black;
-        text-decoration: none; }
+      list-style-type: none;
+      padding: 0; }
+      header ul li {
+        display: inline-block;
+        border: 1px solid black;
+        padding: 5px 15px; }
+        header ul li a {
+          color: black;
+          text-decoration: none; }
+
+  .menu-button {
+    display: none; } }
 
 /*# sourceMappingURL=styles.css.map */
