--- a/css/styles.sass
+++ b/css/styles.sass
@@ -1,18 +1,27 @@
 header
    text-align: center   
    
+   .menu-button
+      padding: 5px 15px
+      background-color: #e7e7e7
+
    ul
       list-style-type: none
-      padding: 0
+      padding: 0 0 5px 0
       display: none
-         
+      border-top: 1px solid black
+      border-bottom: 1px solid black
+      z-index: 1
+
+      li
+         margin-bottom: 4px
+         display: block
+
+      li:hover
+         background-color: #7BB5FF
       a
          color: black
          text-decoration: none
-
-   .button
-      border: 1px solid black
-      padding: 3px 15px
 
    #close-menu
       display: none
@@ -22,9 +31,13 @@ main
    .slide
       height: 200px
  
-   .intro, .ship
+   h2, .content
       width: 80%
       margin: auto
+
+   .parallax
+      height: 200px
+      box-shadow: inset 10px 10px 10px #555
 
 
 footer
@@ -37,19 +50,25 @@ footer
       li
          display: inline-block
 
-@media (width: 700px)
-header
-   text-align: center   
-   
-   ul
-      list-style-type: none
-      padding: 0
 
-      li
+
+@media (min-width: 700px)
+   header
+      text-align: center   
+   
+      ul
          display: inline-block
-         border: 1px solid black
-         padding: 5px 15px
+         list-style-type: none
+         padding: 0
+
+         li
+            display: inline-block
+            border: 1px solid black
+            padding: 5px 15px
          
-         a
-            color: black
-            text-decoration: none
+            a
+               color: black
+               text-decoration: none
+
+   .menu-button
+      display: none
