parallax need box-shadow

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ main h2, main .content {
   margin: auto; }
 main .parallax {
   height: 200px;
-  box-shadow: inset 10px 10px 10px #555; }
+  box-shadow: inset 10px 10px 10px #555, inset 10px 10px 10px #555; }
 
 footer {
   text-align: center; }
