--- a/css/styles.sass
+++ b/css/styles.sass
@@ -37,7 +37,7 @@ main
 
    .parallax
       height: 200px
-      box-shadow: inset 10px 10px 10px #555
+      box-shadow: inset 10px 10px 10px #555, inset 10px 10px 10px #555
 
 
 footer
