--- a/css/styles.css
+++ b/css/styles.css
@@ -21,8 +21,8 @@ header {
   header #close-menu {
     display: none; }
 
-main .slide {
-  height: 200px; }
+main #slide {
+  height: 500px; }
 main h2, main .content {
   width: 80%;
   margin: auto; }
